added system design overview - microservice architecture

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -44,3 +44,181 @@
     url 		= 	"https://github.com/v8/v8/wiki"   
 }
 
+@conference{JamesLewis33rdDegree,
+	author = { James Lewis },
+    year = {2012},
+    month = {03},
+    title = { Microservices, Java - the Unix Way },
+    url = { https://vimeo.com/74452550 },
+}
+
+@online{MicroservicesResourceGuide,
+	author = { James Lewis, Martin Fowler },
+    title = { Microservices Resource Guide},
+    year = { 2014 },
+    url = { https://martinfowler.com/microservices/ 	},
+}
+
+@article{StubbingsPolovina,
+    Author = {Stubbings, Gary and Polovina, Simon},
+    ISSN = {0010485X},
+    Journal = {Computing},
+    Keywords = {Object-oriented programming (Computer science), Technological innovations, Computer software, Software engineering, Service-oriented architecture (Computer science), Composite applications (Computer science), 68M11, 68U35, Developer capability, Expertise, Knowledge transfer, Object-orientation, Programming approach, Service-orientation, Service-ready},
+    Number = {9},
+    Pages = {817 - 835},
+    Title = {Levering object-oriented knowledge for service-oriented proficiency.},
+    Volume = {95},
+    URL = {http://search.ebscohost.com/login.aspx?direct=true&db=bth&AN=90053029&site=eds-live},
+    Year = {2013},
+}
+
+@conference{GOTOConference,
+    author = { Martin Fowler },
+    title = { GOTO Conference Berlin 2014, Microservices },
+    year = { 2014 },
+    url = { https://www.youtube.com/watch?v=wgdBVIX9ifA }
+}
+
+@conference{adriancockcroft,
+	author = { Adrian Cockcroft },
+    title = { State of the Art in Microservices },
+    year = {2014},
+    url = {https://youtu.be/nMTaS07i3jk}
+}
+
+@online {Hystrix,
+	author = { Netflix },
+    title = { Hystrix },
+	url = { https://github.com/Netflix/Hystrix},
+}
+
+@online {ChaosMonkey,
+	author = { Netflix },
+    title = { Chaos Monkey },
+	url = { https://github.com/Netflix/chaosmonkey },
+}
+
+@conference{MasteringChaosNetflix,
+	author = {Josh Evans},
+    title = {Mastering Chaos - A Netflix Guide to Microservices},
+    year = { 2016 },
+    location = { QCon San Francisco },
+    url = { https://www.infoq.com/presentations/netflix-chaos-microservices },
+}
+
+
+@online{JPAHibernate,
+	author = { RedHat JBoss Middleware },
+    title = { Hibernate ORM },
+    url = { http://hibernate.org/orm/ },
+}
+
+@phdthesis{Fielding:2000:ASD:932295,
+	author = {Fielding, Roy Thomas},
+ 	title = {Architectural Styles and the Design of 		Network-based Software Architectures},
+ 	year = {2000},
+    isbn = {0-599-87118-0},
+    note = {AAI9980887},
+    publisher = {University of California, Irvine},
+} 
+
+@article{hiddendividends,
+Abstract = {The article discusses benefits of microservices in relation to distributed systems that use APIs (application program interfaces). Topics include the notion of permissionless innovation as opposed to gatekeepers blocking integration, the needs to enable failure using microservices, and the relation of service-level agreements (SLAs) to trust.},
+Author = {KILLALEA, TOM},
+ISSN = {00010782},
+Journal = {Communications of the ACM},
+Keywords = {Distributed computing, Application program interfaces (Computer software), System integration, Service level agreements, Computer system failure prevention},
+Number = {8},
+Pages = {42 - 45},
+Title = {The Hidden Dividends of Microservices.},
+Volume = {59},
+URL = {http://search.ebscohost.com/login.aspx?direct=true&db=bth&AN=117173592&site=eds-live},
+Year = {2016},
+}
+
+@article{MicroservicesYesterdayTodayTomorrow,
+  author = {Dragoni, Nicola and Giallorenzo, Saverio and Lluch-Lafuente, Alberto and Mazzara, Manuel and Montesi, Fabrizio and Mustafin, Ruslan and Safina, Larisa},
+  year = {2016},
+  month = {06},
+  pages = {},
+  title = {Microservices: yesterday, today, and tomorrow}
+}
+
+@inproceedings{Knoche:2016:SRP:2851553.2892039,
+ author = {Knoche, Holger},
+ title = {Sustaining Runtime Performance While Incrementally Modernizing Transactional Monolithic Software Towards Microservices},
+ booktitle = {Proceedings of the 7th ACM/SPEC on International Conference on Performance Engineering},
+ series = {ICPE '16},
+ year = {2016},
+ isbn = {978-1-4503-4080-9},
+ location = {Delft, The Netherlands},
+ pages = {121--124},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/2851553.2892039},
+ doi = {10.1145/2851553.2892039},
+ acmid = {2892039},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {microservices, software modernization},
+} 
+
+@online{gRPC,
+	author = { Google },
+    title = { gRPC },
+    url = {https://grpc.io/},
+}
+
+@online{ProtocolBuffers,
+	author = { Google },
+    title = {Protocol Buffers },
+    url = { https://developers.google.com/protocol-buffers/},
+}
+
+@online{gRPCHackernoon,
+	author = { Joey Clover },
+    title = { Microservices are hard - an invaluable guide to microservices },
+    url = {https://hackernoon.com/microservices-are-hard-an-invaluable-guide-to-microservices-2d06bd7bcf5d},
+}
+
+@online{BoundedContext,
+	author = "Martin Fowler",
+    title = "Bounded Context",
+	url = { https://martinfowler.com/bliki/BoundedContext.html},
+}
+
+@online{APIGateways,
+	author = { Nginx },
+    title = { Building Microservices: Using an API Gateway},
+    url = { https://www.nginx.com/blog/building-microservices-using-an-api-gateway/},
+}
+
+@online{ServiceDiscovery,
+	author = { Nginx },
+    title = { Service Discovery in Microservices Architecture},
+    url = { https://www.nginx.com/blog/service-discovery-in-a-microservices-architecture/ },
+}
+
+@book{Gamma:1995:DPE:186897,
+ author = {Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John},
+ title = {Design Patterns: Elements of Reusable Object-oriented Software},
+ year = {1995},
+ isbn = {0-201-63361-2},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+ pages = { 175 }
+} 
+
+@book{BuildingMicroServices,
+	author = { Sam Newmann },
+    title = { Building Microservices },
+    year = { 2014 },
+    publisher = { O'Reilly },
+    isbn = { 9781491950357 },
+}
+
+@conference{npm,
+	author = { Laurie Voss },
+    year = { 2016 },
+    title = { How npm split a monolith and lived to tell the tale },
+    url = { https://www.oreilly.com/ideas/how-npm-split-a-monolith-and-lived-to-tell-the-tale },
+}
