added industry partner title to main cover page

--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 
 %% Change these:
 \newcommand{\projecttitle}{My Consultancy Services}
+\newcommand{\industrypartner}{Delta Ready Technology Pty Ltd}
 \newcommand{\projectauthor}{Damian Nolan \\[0.2cm] Daniel Verdejo}
 \newcommand{\projectadvisor}{Daniel Cregg}
 \newcommand{\projectprogramme}{B.Sc.(Hons) in Software Development}
@@ -41,6 +42,7 @@
       \centering
       \rule{\linewidth}{0.5mm} \\[0.4cm]
       { \LARGE \bfseries \projecttitle \\[0.4cm] }
+      { \bfseries \industrypartner \\[0.4cm]}
       \rule{\linewidth}{0.5mm} \\[0.8cm]
     \end{minipage}
     
