added json info

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,48 +1,64 @@
-@article{kanban,
-    author 		=	"TutorialsPoint",
-    title		=	"Kanban",
-    year 		=	"2016",
-    url 		=	"https://www.tutorialspoint.com/kanban/kanban_tutorial.pdf"
+@misc{kanban,
+    author 		=	{TutorialsPoint},
+    title		=	{Kanban},
+    year 		=	{2016},
+    url 		=	{https://www.tutorialspoint.com/kanban/kanban_tutorial.pdf},
 }
  
-@article{willis,
-    author    	= 	"John Willis, Docker",
-    title     	= 	"DOCKER AND THE THREE WAYS OF DEVOPS",
-    year      	= 	"2015",
-    url   	  	= 	"https://www.docker.com/sites/default/files/WP_Docker%20and%20the%203%20ways%20devops.pdf"
+@misc{willis,
+    author    	= 	{John Willis, Docker},
+    title     	= 	{DOCKER AND THE THREE WAYS OF DEVOPS},
+    year      	= 	{2015},
+    url   	  	= 	{https://www.docker.com/sites/default/files/WP_Docker%20and%20the%203%20ways%20devops.pdf},
 }
 
 @book{chachon,
-	author    	=	"Scott Chacon, Ben Straub",
-    title	  	= 	"Pro Git",
-    edition		=	"Second Edition",
-    publisher	=	"Apress",
-    year		=	"2014",
-    url 	  	= 	"https://git-scm.com/book/en/v2"
+	author    	=	{Scott Chacon, Ben Straub},
+    title	  	= 	{Pro Git},
+    edition		=	{Second Edition},
+    publisher	=	{Apress},
+    year		=	{2014},
+    url 	  	= 	{https://git-scm.com/book/en/v2},
 }
 
 @misc{driessen,
-	author    	= 	"Vincent Driessen",
-	title     	= 	"A successful Git branching model",
-    year		=	"2010",
-    month		=	"January",
-    note		=	"Blog post, date accessed Jan/2018",
-	url       	= 	"http://nvie.com/posts/a-successful-git-branching-model/"
+	author    	= 	{Vincent Driessen},
+	title     	= 	{A successful Git branching model},
+    year		=	{2010},
+    month		=	{January},
+    note		=	{Blog post, date accessed Jan/2018},
+	url       	= 	{http://nvie.com/posts/a-successful-git-branching-model/},
 }
 
 @misc{node,
-	author		=	"NodeJS",
-    title		=	"Documentation",
-    note		=	"Dates accessed, Oct-2017 to Apr-2018",
-    url			=	"https://nodejs.org/en/about/"
+	author		=	{NodeJS},
+    title		=	{Documentation},
+    note		=	{Dates accessed, Oct-2017 to Apr-2018},
+    url			=	{https://nodejs.org/en/about/},
 }
 
 @misc{googleV8,
-	author		=	"Google",
-    title		=	"Chrome V8 Engine Documentation",
-    note		=	"Date accessed, 08-Apr-2018",
-    url 		= 	"https://github.com/v8/v8/wiki"   
+	author		=	{Google},
+    title		=	{Chrome V8 Engine Documentation},
+    note		=	{Date accessed, 08-Apr-2018},
+    url 		= 	{https://github.com/v8/v8/wiki},
 }
+
+@techreport{ecma,
+	autho		=	{Ecma International},
+    title		=	{Standard ECMA-262 5.1 Edition, ECMAScript® Language Specification},
+    year		=	{2011},
+    month		=	{June},
+    url			=	{https://www.ecma-international.org/ecma-262/5.1/#sec-15.12},
+}
+
+@manual{crockford,
+	author		=	{D. Crockford},
+    title		=	{RFC 4627 JSON)},
+    year		=	{2006},
+    month		=	{July},
+    url			=	{http://www.ietf.org/rfc/rfc4627.txt},
+} 
 
 @conference{JamesLewis33rdDegree,
 	author = { James Lewis },
@@ -181,8 +197,8 @@ Year = {2016},
 }
 
 @online{BoundedContext,
-	author = "Martin Fowler",
-    title = "Bounded Context",
+	author = "Martin Fowler},
+    title = "Bounded Context},
 	url = { https://martinfowler.com/bliki/BoundedContext.html},
 }
 
