--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,7 @@
 \usepackage{titlesec}
 \usepackage[hidelinks]{hyperref}
 \usepackage{fancyhdr}
+\usepackage{listings}
 \usetikzlibrary{mindmap,shadows, shapes, arrows, positioning}
 
 %% Change these:
