added what is typescript

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -45,7 +45,7 @@
 }
 
 @techreport{ecma,
-	autho		=	{Ecma International},
+	author		=	{ECMA International},
     title		=	{Standard ECMA-262 5.1 Edition, ECMAScript® Language Specification},
     year		=	{2011},
     month		=	{June},
@@ -237,4 +237,10 @@ Year = {2016},
     year = { 2016 },
     title = { How npm split a monolith and lived to tell the tale },
     url = { https://www.oreilly.com/ideas/how-npm-split-a-monolith-and-lived-to-tell-the-tale },
+}
+
+@online{typescript,
+	author = { Microsoft },
+    title = { TypeScript },
+    url = {https://typescriptlang.org/},
 }
