added typescript integration with node.js

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,15 @@
+@online{nodedebug,
+	author 		= 	{Node.js}
+    title		= 	{Debugging Guide},
+    url 		= 	{https://nodejs.org/en/docs/guides/debugging-getting-started/}
+}
+
+@online{npmscripts,
+	author		=	{NPM},
+    title		= 	{NPM Scripts},
+    url			= 	{https://docs.npmjs.com/misc/scripts}
+}
+
 @misc{kanban,
     author 		=	{TutorialsPoint},
     title		=	{Kanban},
@@ -10,15 +22,6 @@
     title     	= 	{DOCKER AND THE THREE WAYS OF DEVOPS},
     year      	= 	{2015},
     url   	  	= 	{https://www.docker.com/sites/default/files/WP_Docker%20and%20the%203%20ways%20devops.pdf},
-}
-
-@book{chachon,
-	author    	=	{Scott Chacon, Ben Straub},
-    title	  	= 	{Pro Git},
-    edition		=	{Second Edition},
-    publisher	=	{Apress},
-    year		=	{2014},
-    url 	  	= 	{https://git-scm.com/book/en/v2},
 }
 
 @misc{driessen,
@@ -44,7 +47,12 @@
     url 		= 	{https://github.com/v8/v8/wiki},
 }
 
-@techreport{ecma,
+@online{andershejlsberg,
+	author		= 	{Anders Hejlsberg},
+    title		= 	{Introducing TypeScript},
+    url			=	{https://channel9.msdn.com/posts/Anders-Hejlsberg-Introducing-TypeScript}}
+
+@manual{ecma,
 	author		=	{ECMA International},
     title		=	{Standard ECMA-262 5.1 Edition, ECMAScript® Language Specification},
     year		=	{2011},
@@ -59,6 +67,14 @@
     month		=	{July},
     url			=	{http://www.ietf.org/rfc/rfc4627.txt},
 } 
+
+@manual{w3c,
+	author		=	{W3C},
+    title		=	{Extensible Markup Language},
+    year		=	{2008},
+    month		=	{Novemeber},
+    url			=	{https://www.w3.org/TR/2008/REC-xml-20081126/},
+}
 
 @conference{JamesLewis33rdDegree,
 	author = { James Lewis },
@@ -230,6 +246,15 @@ Year = {2016},
     year = { 2014 },
     publisher = { O'Reilly },
     isbn = { 9781491950357 },
+}
+
+@book{chachon,
+	author    	=	{Scott Chacon, Ben Straub},
+    title	  	= 	{Pro Git},
+    edition		=	{Second Edition},
+    publisher	=	{Apress},
+    year		=	{2014},
+    url 	  	= 	{https://git-scm.com/book/en/v2},
 }
 
 @conference{npm,
