added json and xml conversion, and radicale

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -10,6 +10,12 @@
     url			= 	{https://docs.npmjs.com/misc/scripts}
 }
 
+@online{kozea,
+	author		=	{Kozea},
+    title		=	{Radicale documentation},
+    url			=	{http://radicale.org/about/}
+}
+
 @misc{kanban,
     author 		=	{TutorialsPoint},
     title		=	{Kanban},
