bibliography now using biblatex and url's printing correctly

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,12 @@
+@online{tslint,
+	author 		=	{Palantir Technologies},
+    title 		= 	{TSLint},
+    url			= 	{https://palantir.github.io/tslint/}
+}
+
 @online{nodedebug,
-	author 		= 	{Node.js}
-    title		= 	{Debugging Guide},
+	author 		= 	{Node.js},
+    title		= 	{"Debugging Guide"},
     url 		= 	{https://nodejs.org/en/docs/guides/debugging-getting-started/}
 }
 
@@ -219,8 +225,8 @@ Year = {2016},
 }
 
 @online{BoundedContext,
-	author = "Martin Fowler},
-    title = "Bounded Context},
+	author = {Martin Fowler},
+    title = {Bounded Context},
 	url = { https://martinfowler.com/bliki/BoundedContext.html},
 }
 
