--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,9 @@
 \usepackage{listings}
 \usetikzlibrary{mindmap,shadows, shapes, arrows, positioning}
 
+\usepackage[sorting=none]{biblatex}
+\addbibresource{bibliography.bib}
+
 %% Change these:
 \newcommand{\projecttitle}{My Consultancy Services}
 \newcommand{\industrypartner}{Delta Ready Technology Pty Ltd}
@@ -73,6 +76,8 @@
   \setcounter{page}{2}
   \tableofcontents
   \input{content.tex}
-  \bibliographystyle{ieeetr}
-  \bibliography{bibliography}
+  %\bibliographystyle{ieeetr}
+  %\bibliography{bibliography}
+  \newpage
+  \printbibliography
 \end{document}
