finished tslint section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,9 @@
+@online{githooks,
+	author		= 	{Git},
+    title		=	{8.3 Customizing Git - Git Hooks},
+    url			=	{https://git-scm.com/book/en/v2/Customizing-Git-Git-Hooks}
+}
+
 @online{tslint,
 	author 		=	{Palantir Technologies},
     title 		= 	{TSLint},
