minor changes and fixed title page

--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,8 @@
 \newcommand{\projecttitle}{My Consultancy Services}
 \newcommand{\industrypartner}{Delta Ready Technology Pty Ltd}
 \newcommand{\projectauthor}{Damian Nolan \\[0.2cm] Daniel Verdejo}
-\newcommand{\projectadvisor}{Daniel Cregg}
+\newcommand{\projectadvisor}{Daniel Cregg (GMIT)}
+\newcommand{\projectindustrialadvisor}{Patrick Nolan \\(Delta Ready Technology Pty Ltd)}
 \newcommand{\projectprogramme}{B.Sc.(Hons) in Software Development}
 \newcommand{\projectdate}{\today}
 %% End of things to change.
@@ -50,7 +51,7 @@
       \rule{\linewidth}{0.5mm} \\[0.8cm]
     \end{minipage}
     
-    \begin{minipage}[t][6.5cm]{\textwidth}
+    \begin{minipage}[t][5.5cm]{\textwidth}
       \centering
       \textbf{\projectauthor}\\[0.5cm]
       \projectprogramme
@@ -61,10 +62,13 @@
       \textsc{\projectdate}
     \end{minipage}
       
-    \begin{minipage}[t][3cm]{\textwidth}
+    \begin{minipage}[t][4cm]{\textwidth}
       \centering
       \textbf{Final Year Project}\\[0.3cm]
-      Advised by: \projectadvisor \\[0.1cm]
+      Advised by: \\ 
+      \projectadvisor\\[0.1cm]
+      \& \\
+      \projectindustrialadvisor \\[0.1cm]
       Department of Computer Science and Applied Physics\\
       Galway-Mayo Institute of Technology (GMIT)
     \end{minipage}
