--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,9 @@
+@online{monorepository,
+	author 		=	{Stefan Saasen, Atlassian},
+    title		=	{Monorepos in Git},
+    url			={https://developer.atlassian.com/blog/2015/10/monorepos-in-git/}
+}
+
 @online{githooks,
 	author		= 	{Git},
     title		=	{8.3 Customizing Git - Git Hooks},
