--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,15 @@
+@online{es8,
+	author		=	{ECMAScript International},
+    title 		=	{ECMAScript 2017 Language Specification},
+    url			=	{https://www.ecma-international.org/publications/files/ECMA-ST/Ecma-262.pdf}
+}
+
+@online{asyncawait,
+	author		=	{Mostafa Gaafar},
+    title		=	{Hackernooon - 6 Reasons Why JavaScript’s Async/Await Blows Promises Away},
+    url			=	{https://hackernoon.com/6-reasons-why-javascripts-async-await-blows-promises-away-tutorial-c7ec10518dd9}
+}
+
 @online{monorepository,
 	author 		=	{Stefan Saasen, Atlassian},
     title		=	{Monorepos in Git},
