updated tech review

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,44 @@
+@online{couchvsmongo,
+	author 		=	{Matan Sarig},
+    title		=	{CouchDB vs MongoDB},
+    url			=	{https://blog.panoply.io/couchdb-vs-mongodb}}
+
+@online{couchapi,
+	author		=	{Apache Software Foundation},
+    title		=	{CouchDB - HTTP API Reference},
+    url			=	{http://docs.couchdb.org/en/2.0.0/http-api.html}
+}
+
+@online{docStore,
+	author		=	{DB Engines},
+    title		=	{Document Stores},
+    url			=	{https://db-engines.com/en/article/Document+Stores}
+}
+
+@online{couchdb,
+	author		=	{Apache Software Foundation},
+    title		=	{CouchDB},
+    url			=	{http://couchdb.apache.org/}
+}
+
+@online{dbranking,
+	author		=	{DB-Engines},
+    title		=	{DB-Engines Ranking},
+    url			=	{https://db-engines.com/en/ranking}
+}
+
+@online{postgresguide,
+	author		=	{Craig Kerstiens},
+    title		=	{PostgresGuide},
+    url			=	{http://www.postgresguide.com/}
+}
+
+@online{postgres,
+	author		=	{PostgreSQL},
+    title		=	{About PostgreSQL},
+    url			=	{https://www.postgresql.org/about/}
+}
+
 @online{es8,
 	author		=	{ECMAScript International},
     title 		=	{ECMAScript 2017 Language Specification},
