added tech review on ms bot framework

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,38 @@
+@online{LUIS,
+	author		=	{Microsoft},
+    title		=	{LUIS},
+    url			=	{https://www.luis.ai/}
+}
+
+@online{vscode,
+	author		=	{Microsoft},
+    title		=	{Visual Studio Code},
+    url			=	{https://code.visualstudio.com/}
+}
+
+@online{botemulator,
+	author		=	{Microsoft},
+    title		=	{Bot Framework Emulator},
+    url			=	{https://github.com/Microsoft/BotFramework-Emulator}
+}
+
+@online{express,
+	author 		=	{Node.js Foundation},
+    title		=	{Express.js},
+    url			= 	{ https://expressjs.com/ }
+}
+
+@online{restify,
+	author		=	{Restify},
+    title		=	{Restify},
+    url			=	{http://restify.com/}}
+
+@online{msbotframework,
+	author 		=	{Microsoft},
+    title		=	{Bot Framework},
+    url			=	{https://dev.botframework.com/}
+}
+
 @online{couchvsmongo,
 	author 		=	{Matan Sarig},
     title		=	{CouchDB vs MongoDB},
