Damian: Introduction, Danny: System Evaluation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,19 @@
+@online{jenkinspipeline,
+	author	=	{Jenkins},
+	title	=	{Jenkins Pipeline},
+    url		=	{https://jenkins.io/doc/book/pipeline/}
+}
+
+@online{deltareadytechnology,
+	url		=	{https://deltareadytechnology.com.au/}
+}
+
+@online{userstories,
+	author	=	{Agile Modeling},
+    title	=	{User Stories: An Agile Introduction},
+    url 	= 	{http://www.agilemodeling.com/artifacts/userStory.htm}
+}
+
 @online{JohnZaccone,
 	title	=	{John Zaconne, Docker Captain},
     url		=	{https://www.docker.com/captains/john-zaccone}
