added  expectations v reality to evaluation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -224,6 +224,13 @@ keywords = "Container-based virtualization technologies, Cloud computing, Perfor
     title		= 	{Introducing TypeScript},
     url			=	{https://channel9.msdn.com/posts/Anders-Hejlsberg-Introducing-TypeScript}}
 
+@online{justinwillis,
+	author		=	{Justin Willis, Ionic},
+    title		=	{Announcing the Ionic PWA Toolkit Beta},
+    year		=	{2018},
+    month		=	{January},
+    url			=	{https://blog.ionicframework.com/announcing-the-ionic-pwa-toolkit-beta/}
+}
 @manual{ecma,
 	author		=	{ECMA International},
     title		=	{Standard ECMA-262 5.1 Edition, ECMAScript® Language Specification},
