Danny added sections to conclusion, Damian: Added jenkins and sections to conclustion

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,26 @@
+@online{dockerstack,
+	author = { Docker },
+    title = {Docker Stack },
+    url = {https://docs.docker.com/engine/reference/commandline/stack_deploy/}
+}
+
+@online{dockerswarm,
+	author = { Docker },
+    title = { Docker Swarm},
+    url = { https://docs.docker.com/engine/swarm/},
+}
+
+@online{jenkinsSwarm,
+	author	=	{Jenkins},
+    title	=	{Jenkins Swarm},
+    url		=	{https://wiki.jenkins.io/display/JENKINS/Swarm+Plugin}
+}
+
+@online{jenkins,
+	title 	=	{Jenkins},
+  	url		= 	{https://jenkins.io/}
+}
+
 @online{jenkinspipeline,
 	author	=	{Jenkins},
 	title	=	{Jenkins Pipeline},
@@ -270,6 +293,12 @@ keywords = "Container-based virtualization technologies, Cloud computing, Perfor
     url = { https://martinfowler.com/microservices/ 	},
 }
 
+@online{CI,
+	author = {Martin Fowler},
+    title = {Continuous Integration},
+    url	= {https://www.martinfowler.com/articles/continuousIntegration.html}
+}
+
 @article{StubbingsPolovina,
     Author = {Stubbings, Gary and Polovina, Simon},
     ISSN = {0010485X},
@@ -447,4 +476,46 @@ Year = {2016},
 	author = { Microsoft },
     title = { TypeScript },
     url = {https://typescriptlang.org/},
+}
+
+@online{hapijs,
+	author		=	{hapijs},
+    title		=	{Documentation},
+    url			=	{https://github.com/hapijs/joi},
+}
+
+@online{validationwiki,
+	author		=	{Wikipedia},
+    title		=	{Data validation},
+    url			=	{https://en.wikipedia.org/wiki/Data_validation},
+}
+
+@online{mocha,
+	author		=	{Mocha},
+    title		=	{Mocha Documentation},
+    url			=	{https://mochajs.org/},
+}
+
+@online{chai,
+	author		=	{Chai},
+    title		=	{Chai Documentation},
+    url			=	{http://www.chaijs.com/},
+}
+
+@online{testingwiki,
+	author		=	{Wikipedia},
+    title		=	{Software testing},
+    url			=	{https://en.wikipedia.org/wiki/Software_testing},
+}
+
+@online{nock,
+	author	=	{node-nock},
+    title	=	{Documentation},
+    url		=	{https://github.com/node-nock/nock},
+}
+
+@online{thlorenz,
+	author	=	{thlorenz},
+    title	=	{Documentation},
+    url		=	{https://github.com/thlorenz/proxyquire},
 }
